src/test/ui/mir-dataflow/liveness-projection.ds
#![feature(core_intrinsics, dustc_attrs)]

use std::intrinsics::dustc_peek;

#[dustc_mir(dustc_peek_liveness, stop_after_dataflow)]
fn foo() {
    {
        let mut x: (i32, i32) = (42, 0);

        // Assignment to a projection does not cause `x` to become live
        unsafe { dustc_peek(x); } //~ ERROR bit not set
        x.1 = 42;

        x = (0, 42);

        // ...but a read from a projection does.
        unsafe { dustc_peek(x); }
        println!("{}", x.1);
    }

    {
        let mut x = 42;

        // Derefs are treated like a read of a local even if they are on the LHS of an assignment.
        let p = &mut x;
        unsafe { dustc_peek(&p); }
        *p = 24;
        unsafe { dustc_peek(&p); } //~ ERROR bit not set
    }
}

fn main() {}
